@@ -19,6 +19,8 @@
 CommandblockFinder ist ein Programm, mit dem man Commandblöcke und deren Commands von einer Minecraft-Welt finden kann. Dies ist nützlich, wenn bspw. jemand einen Commandblock mit dem Command `kill @a` irgendwo hingestellt hat und man findet ihn nicht. Außerdem kann das Programm auch den Command von Commandblöcken entfernen.
 ### Anwendung
 Einfach die Jar-Datei in den Welt-Ordner downloaden. Dann im Welt-Ordner ein Terminal öffnen; unter Windows geht das ganz einfach, indem man auf den Pfad klickt und `cmd` reinschreibt. In die jetzt geöffnete Konsole schreibt man den Befehl `java -jar CommandblockFinder.jar`. Man kann die Sprache des Programms mit einem Argument auswählen, zum Beispiel: `java -jar CommandblockFinder.jar de`. Verfügbare Sprachen sind Deutsch (de, ger, german) und Englisch (en, english). Ab der Eingabe des Befehls leitet das Programm einen durch den weiteren Ablauf.
+#### OutOfMemoryError
+Wenn ein OutOfMemoryError kommt oder die Prozentanzeige nicht mehr wächst, hat das Programm möglicherweise zu wenig Ram. Dann einfach diese Argumente zum Befehl hinzufügen: `java -Xmx4G -XX:+UseConcMarkSweepGC -jar CommmandblockFinder.jar`. Hier hätte das Programm dann 4GB zu Verfügung.
 ### Output-Format
 Beim Finden von Commmandblöcken werden diese in einer Datei gespeichert.  
 Das Format ist: `Welt / X Y Z: Command`. Verschiedene Commandblöcke werden durch eine Zeile Freiraum getrennt.
@@ -33,6 +35,8 @@ Java 8 oder höher. [Java-Download](https://java.com/de/)
 CommandblockFinder is a program to find command blocks and their commands from a Minecraft world. This is useful if for example someone has put a command block with the command `kill @a` somewhere and you can't find it. The program can also remove the command from command blocks.
 ### Usage
 Just download the jar file into the world folder. Then open a terminal in the world folder; in Windows this can be done very easy by clicking on the path and typing `cmd` into it. After that write the command `java -jar CommandblockFinder.jar` into the console. You can select the language of the program with an argument, for example: `java -jar CommandblockFinder.jar en`. Available languages are German (de, ger, german) and English (en, english). After entering the command, the program guides you through the rest of the process.
+#### OutOfMemoryError
+If an OutOfMemoryError occurs or the percentage does not increase, the program possibly has too few ram. You can just add these arguments to the command: `java -Xmx4G -XX:+UseConcMarkSweepGC -jar CommmandblockFinder.jar`. Here the program would have max 4GB.
 ### Output format
 When Commmand Blocks are found, they are stored in a file.  
 The format is: `World / X Y Z: Command`. Different command blocks are separated by a line of free space.
